--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>3.2.15.RELEASE</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 	    	<groupId>org.springframework.data</groupId>
 	    	<artifactId>spring-data-redis</artifactId>
 	    	<scope>compile</scope>
@@ -113,43 +113,19 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.7.0</version>
-		</dependency> -->
-		<dependency>
-				<groupId>com.platform.commons</groupId>
-  				<artifactId>com.platform.commons.redis</artifactId>
-				<version>1.0.0</version>
-				<exclusions>
-			        <exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-context</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-test</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-beans</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-aop</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-core</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-context-support</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-tx</artifactId>
-					</exclusion>
-		       </exclusions>
+			<version>2.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <scope>test</scope>
+	      <version>4.11</version>
+	    </dependency>
 		<dependency>
   			<groupId>c3p0</groupId>
   			<artifactId>c3p0</artifactId>
